--- a/nav/toolbar/toolbar.html
+++ b/nav/toolbar/toolbar.html
@@ -4,7 +4,7 @@
 	<head>
 		<title>toolbar</title>
         
-		<link type="text/css" href="../smoothness/jquery-ui-1.7.2.custom.css" rel="stylesheet" />
+		<link type="text/css" href="../../smoothness/jquery-ui-1.7.2.custom.css" rel="stylesheet" />
 		<style>
 			.ui-menu {
 				margin: 0px; padding: 0px;
@@ -71,9 +71,7 @@
             </ul>
         </div>
 		<script type='text/javascript' 
-                src='../../steal/steal.js?steal[app]=mxui/toolbar&steal[env]=development'
-                package='main.js'
-                compress='false'>   
+                src='../../../steal/steal.js?steal[app]=mxui/nav/toolbar'>   
         </script>
         <script type='text/javascript'>
             var J = Mxui;
