--- a/form/combobox/api8b.html
+++ b/form/combobox/api8b.html
@@ -47,8 +47,8 @@
                 src='../../steal/steal.js'>   
         </script>
         <script type='text/javascript'>
-            steal.plugins("mxui/combobox/select",
-			              "mxui/combobox/ajax",
+            steal.plugins("mxui/form/combobox/select",
+			              "mxui/form/combobox/ajax",
 			              "jquery/dom/fixture").then(function($){
             
 				/*
@@ -73,7 +73,7 @@
 				}
 				maximize();				
 									
-                $("#combobox8k").mxui_combobox({
+                $("#combobox8k").mxui_form_combobox({
                     	items: createItems(6),
 						showNoSelectionOption: true
 				});		
