--- a/form/combobox/autocomplete7.html
+++ b/form/combobox/autocomplete7.html
@@ -43,8 +43,8 @@
                 src='../../steal/steal.js'>   
         </script>
         <script type='text/javascript'>
-            steal.plugins("mxui/combobox/select",
-			              "mxui/combobox/ajax",
+            steal.plugins("mxui/form/combobox/select",
+			              "mxui/form/combobox/ajax",
 			              "jquery/dom/fixture").then(function($){
             
 				/*
@@ -73,7 +73,7 @@
 				 *  7a Tests that if item with lowercase text is searched by keying the first character capitalized, 
 				 *  the item shows up in the filtered list. 
 				 */					
-                $("#combobox7a").mxui_combobox({
+                $("#combobox7a").mxui_form_combobox({
                     	items: createItems(6)
 					});					
 			                    
