--- a/form/combobox/combobox3_iframe.html
+++ b/form/combobox/combobox3_iframe.html
@@ -71,8 +71,8 @@
                 src='../../steal/steal.js'>   
         </script>
         <script type='text/javascript'>
-            steal.plugins("mxui/combobox/select",
-			              "mxui/combobox/ajax",
+            steal.plugins("mxui/form/combobox/select",
+			              "mxui/form/combobox/ajax",
 			              "jquery/dom/fixture").then(function($){
             
 				/*
@@ -93,7 +93,7 @@
 				/*
 				 *  1. Combobox appended to <div> - <div> is not positioned
 				 */					
-                $("#combobox1").mxui_combobox({
+                $("#combobox1").mxui_form_combobox({
                     	items: createItems(6)
 					});
 				// get the dropdown's height and store in input[id=combobox1_dropdown_height]
@@ -107,7 +107,7 @@
 				/*
 				 * 2. Combobox appended to <div> - <div> is positioned (absolute)
 				 */
-                $("#combobox2").mxui_combobox({
+                $("#combobox2").mxui_form_combobox({
                     	items: createItems(15)
 					});
 				// get the dropdown's height and store in input[id=combobox2_dropdown_height]
