--- a/form/combobox/comboboxdemo1.html
+++ b/form/combobox/comboboxdemo1.html
@@ -49,10 +49,10 @@
                 src='../../steal/steal.js'>   
         </script>
         <script type='text/javascript'>
-            steal.plugins("mxui/combobox/select", "mxui/combobox/ajax", "jquery/dom/fixture").then(function($){
+            steal.plugins("mxui/form/combobox/select", "mxui/form/combobox/ajax", "jquery/dom/fixture").then(function($){
 
 				$(function(){
-					$("input#combobox_demo").mxui_combobox({
+					$("input#combobox_demo").mxui_form_combobox({
                     items: [{ value: "1", text: "hola", enabled: "true", selected: true,
                                 children: [  { value: "5", text: "chicago", enabled: "true", children: [] },
                                               { value: "6", text: "kansas", enabled: "true", 
