--- a/form/combobox/positioning4b.html
+++ b/form/combobox/positioning4b.html
@@ -41,8 +41,8 @@
                 src='../../steal/steal.js'>   
         </script>
         <script type='text/javascript'>
-            steal.plugins("mxui/combobox/select",
-			              "mxui/combobox/ajax",
+            steal.plugins("mxui/form/combobox/select",
+			              "mxui/form/combobox/ajax",
 			              "jquery/dom/fixture").then(function($){
             
 				/*
@@ -71,7 +71,7 @@
 				/*
 				 *  4b Tests that if the element can be positioned with scrolling greater than min height, the dropdown opens bellow with height equal the space available.
 				 */					
-                $("#combobox4b").mxui_combobox({
+                $("#combobox4b").mxui_form_combobox({
                     	items: createItems(30)
 					});					
 			                    
