--- a/form/combobox/positioning4c.html
+++ b/form/combobox/positioning4c.html
@@ -48,8 +48,8 @@
                 src='../../steal/steal.js'>   
         </script>
         <script type='text/javascript'>
-            steal.plugins("mxui/combobox/select",
-			              "mxui/combobox/ajax",
+            steal.plugins("mxui/form/combobox/select",
+			              "mxui/form/combobox/ajax",
 			              "jquery/dom/fixture").then(function($){
             
 				/*
@@ -79,7 +79,7 @@
 				 *  4c Tests if the space above is greater than the space below and  dropdown fits in space above,
 				 *  the dropdown opens above with full height.
 				 */					
-                $("#combobox4c").mxui_combobox({
+                $("#combobox4c").mxui_form_combobox({
                     	items: createItems(15)
 					});					
 			                    
