--- a/form/combobox/positioning4d.html
+++ b/form/combobox/positioning4d.html
@@ -48,8 +48,8 @@
                 src='../../steal/steal.js'>   
         </script>
         <script type='text/javascript'>
-            steal.plugins("mxui/combobox/select",
-			              "mxui/combobox/ajax",
+            steal.plugins("mxui/form/combobox/select",
+			              "mxui/form/combobox/ajax",
 			              "jquery/dom/fixture").then(function($){
             
 				/*
@@ -79,7 +79,7 @@
 				 *  4d Tests if the space above is greater than the space below and  dropdown doesnt fit in space above, 
 				 *  the dropdown opens to fit space avaialble above.
 				 */					
-                $("#combobox4d").mxui_combobox({
+                $("#combobox4d").mxui_form_combobox({
                     	items: createItems(30)
 					});					
 			                    
