--- a/form/combobox/positioning5e.html
+++ b/form/combobox/positioning5e.html
@@ -40,8 +40,8 @@
                 src='../../steal/steal.js'>   
         </script>
         <script type='text/javascript'>
-            steal.plugins("mxui/combobox/select",
-			              "mxui/combobox/ajax",
+            steal.plugins("mxui/form/combobox/select",
+			              "mxui/form/combobox/ajax",
 			              "jquery/dom/fixture").then(function($){
             
 				/*
@@ -71,7 +71,7 @@
 				 *  and the dropdown doesnt fit the space available 
 				 *  the dropdown opens bellow to fit the space avaialble. 
 				 */					
-                $("#combobox5e").mxui_combobox({
+                $("#combobox5e").mxui_form_combobox({
                     	items: createItems(12)
 					});					
 			                    
