--- a/form/combobox/positioning6a.html
+++ b/form/combobox/positioning6a.html
@@ -49,8 +49,8 @@
                 src='../../steal/steal.js'>   
         </script>
         <script type='text/javascript'>
-            steal.plugins("mxui/combobox/select",
-			              "mxui/combobox/ajax",
+            steal.plugins("mxui/form/combobox/select",
+			              "mxui/form/combobox/ajax",
 			              "jquery/dom/fixture").then(function($){
             
 				/*
@@ -79,7 +79,7 @@
 				/*
 				 *  4a Tests that if the element can be positioned without scrolling below target, the dropdown opens bellow the target with full height.
 				 */					
-                $("#combobox6a").mxui_combobox({
+                $("#combobox6a").mxui_form_combobox({
                     	items: createItems(6)
 					});	
 			                    
