--- a/form/combobox/positioning6d.html
+++ b/form/combobox/positioning6d.html
@@ -55,8 +55,8 @@
                 src='../../steal/steal.js'>   
         </script>
         <script type='text/javascript'>
-            steal.plugins("mxui/combobox/select",
-			              "mxui/combobox/ajax",
+            steal.plugins("mxui/form/combobox/select",
+			              "mxui/form/combobox/ajax",
 			              "jquery/dom/fixture").then(function($){
             
 				/*
@@ -86,7 +86,7 @@
 				 *  6d Tests if the space above is greater than the space below and  dropdown doesnt fit in space above, 
 				 *  the dropdown opens to fit space avaialble above.
 				 */					
-                $("#combobox6d").mxui_combobox({
+                $("#combobox6d").mxui_form_combobox({
                     	items: createItems(20)
 					});					
 			                    
