adding a order plugin

--- a/mxui.html
+++ b/mxui.html
@@ -6,6 +6,11 @@
 	<h1>MXUI</h1>
 	
 	<ul>
+		<li><h3>data</h3>
+			<ul>
+				<li><a href='data/grid2/grid2.html'>Grid2</a></li>
+			</ul>
+		</li>
 		<li><h3>layout</h3>
 			<ul>
 				<li><a href='layout/fill/fill.html'>Fill</a></li>
