--- a/mxui.html
+++ b/mxui.html
@@ -8,7 +8,7 @@
 	<ul>
 		<li><h3>data</h3>
 			<ul>
-				<li><a href='data/grid2/grid2.html'>Grid2</a></li>
+				<li><a href='data/grid/grid.html'>Grid</a></li>
 			</ul>
 		</li>
 		<li><h3>layout</h3>
