minor improvements to grid

--- a/data/grid/grid.html
+++ b/data/grid/grid.html
@@ -69,6 +69,7 @@
 			
 			
 			
+			// we need to also provide the grid with data ...
 			$("#grid").mxui_data_grid({
 				model : Thing,
 				params : params,
