lots of tests and goodness

--- a/mxui.html
+++ b/mxui.html
@@ -15,6 +15,7 @@
 			<ul>
 				<li><a href='layout/fill/fill.html'>Fill</a></li>
 				<li><a href='layout/table_scroll/table_scroll.html'>TableScroll</a></li>
+				<li><a href='layout/wrap/wrap.html'>TableScroll</a></li>
 			</ul>
 		</li>
 		<li><h3>util</h3>
