--- a/nav/menuable/funcunit.html
+++ b/nav/menuable/funcunit.html
@@ -1,8 +1,8 @@
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="../../funcunit/qunit/qunit.css" />
+        <link rel="stylesheet" type="text/css" href="../../../funcunit/qunit/qunit.css" />
         <title>FuncUnit Test</title>
-		<script type='text/javascript' src='../../steal/steal.js?steal[app]=mxui/menuable/test/funcunit'></script>
+		<script type='text/javascript' src='../../../steal/steal.js?mxui/nav/menuable/menuable_test.js'></script>
     </head>
     <body>
 
