--- a/data/grid/grid.html
+++ b/data/grid/grid.html
@@ -28,7 +28,9 @@
 	<link type="text/css" href="../../layout/resize/resize.css" rel="stylesheet" />
 </head>
 <body>
-	<h1>Paginated Grid</h1>
+	<h1>MXUI GRID</h1>
+	
+	<h2>Paginated Grid</h2>
 	<div id='wrapper' class='wrapper'>
 		<div id='grid'></div>
 		<p><a href='javascript://' id='prev'>previous</a>
