accordion working with null objects

--- a/nav/accordion/accordion.html
+++ b/nav/accordion/accordion.html
@@ -62,8 +62,11 @@
 			<div class='content'>Another Piece of Content 2 </div>
 			<h3>three</h3>
 			<div class='content'>content 3 </div>
-			<h3>Four</h3>
-			<div class='content'> Content Four</div>
+			
+			<h3>four</h3>
+			
+			<h3>five</h3>
+			<div class='content'> Content Five</div>
 			 
 	    </div>
 		<br clear="all" />
