--- a/form/combobox/funcunit.html
+++ b/form/combobox/funcunit.html
@@ -1,13 +1,13 @@
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="../../funcunit/qunit/qunit.css" />
+        <link rel="stylesheet" type="text/css" href="../../../funcunit/qunit/qunit.css" />
         <title>FuncUnit Test</title>
         <style>
             body  {
                 margin: 0px; padding: 0px;
             }
         </style>
-		<script type='text/javascript' src='../../steal/steal.js?steal[app]=mxui/combobox/test/funcunit'></script>
+		<script type='text/javascript' src='../../../steal/steal.js'></script>
     </head>
     <body>
 
@@ -17,4 +17,7 @@
     	<h2 id="qunit-userAgent"></h2>
         <ol id="qunit-tests"></ol>
     </body>
+<script type='text/javascript' >
+  steal('mxui/form/combobox/test/funcunit')
+</script>
 </html>
