--- a/nav/slider/slider.html
+++ b/nav/slider/slider.html
@@ -38,17 +38,20 @@
 	    </div>
 		<input id='value2'/>
 		<script type='text/javascript' 
-                src='../../../steal/steal.js?mxui/nav/slider,development'>   
+                src='../../../steal/steal.js'>   
         </script>
 		<script type='text/javascript'>
-			$("#slider").mxui_nav_slider({interval: 1, min: 1, max: 10, val: 5})
-			.change(function(ev, value){
-				$('#value').val(value)
-			});
-			$("#slider2").mxui_nav_slider({interval: 1, min: 1, max: 25, val: 5, contained: false})
-			.change(function(ev, value){
-				$('#value2').val(value)
-			});
+			steal('mxui/nav/slider', function(){
+				$("#slider").mxui_nav_slider({interval: 1, min: 1, max: 10, val: 5})
+				.change(function(ev, value){
+					$('#value').val(value)
+				});
+				$("#slider2").mxui_nav_slider({interval: 1, min: 1, max: 25, val: 5, contained: false})
+				.change(function(ev, value){
+					$('#value2').val(value)
+				});
+			})
+			
 		</script>
 	</body>
 </html>
