Fixed up positionable plugin. Upgraded it to jQueryUI 1.8.17 position plugin.

--- a/nav/tooltip/tooltip.html
+++ b/nav/tooltip/tooltip.html
@@ -44,7 +44,7 @@
 						content: [ themes[ i % themes.length ], dirs[ i % dirs.length ] ].join(" "),
 						theme: themes[ i % themes.length ],
 						position: dirs[ i % dirs.length ]
-					});
+					}).mxui_nav_tooltip("show");
 				});
 
 			})
