--- a/nav/accordion/demo.html
+++ b/nav/accordion/demo.html
@@ -15,6 +15,7 @@
 			}
 			ul {
 				margin: 0px;
+				overflow: auto;
 			}
         </style>
 		
@@ -27,6 +28,8 @@
   <h3>Baked Goods</h3>
   <ul>
     <li>Cookies</li><li>Cake</li><li>Bread</li>
+	<li>Pie</li><li>Muffin</li><li>Loaf</li>
+	<li>Scones</li><li>Brownies</li><li>Tart</li>
   </ul>
   <h3>Americana</h3>
   <ul>
