removing unnecessary steals

--- a/form/combobox/comboboxdemo1.html
+++ b/form/combobox/comboboxdemo1.html
@@ -49,7 +49,7 @@
 				src='../../../steal/steal.js'>
 		</script>
 		<script type='text/javascript'>
-steal("mxui/form/combobox", "jquery/model", "jquery/dom/fixture").then(function($){
+steal("mxui/form/combobox").then(function($){
   $(function(){
     $("input#combobox_demo").mxui_form_combobox({
       items: [
