minor improvements to demo

--- a/demo.html
+++ b/demo.html
@@ -93,14 +93,14 @@
 			<div>
 				Click <a href="javascript://" id='cb'>this</a>
 				to create a 
-				<a href='#!Mxui.Layout.Block'>mxui_layout_block</a>
+				<a href='#!Mxui.Layout.Block'>Block</a>
 				on a hidden <code>#block</code> div.
 			</div>
 			<h3>Modal</h3>
 			<div>
 				Click <a href="javascript://" id='cm'>this</a>
 				to create a 
-				<a href='#!Mxui.Layout.Modal'>mxui_layout_modal</a> on
+				<a href='#!Mxui.Layout.Modal'>Modal</a> on
 				a hidden <code>#modal</code> div.
 			</div>
 		</div>
@@ -127,7 +127,7 @@
 					<tr><td>This table is</td>
 						<td>also a mxui</td>
 						<td><a href='#!Mxui.Nav.Selectable'>
-							nav_selectable</a>.</td></tr>
+							Selectable</a>.</td></tr>
 					<tr><td>Selectable</td>
 						<td>handles key</td>
 						<td>and mouse events,</td></tr>
@@ -145,7 +145,8 @@
 						<td></td></tr>
 				</tbody>
 			</table>
-			<ul id='sortable'><li>This</li><li>is</li><li>a</li><li>mxui_layout_sortable</li></ul>
+			<ul id='sortable'><li>This</li><li>is</li><li>a</li><li>Mxui</li><li>
+				 <a href='#!Mxui.Layout.Sortable'>Sortable</a></li></ul>
 		</div>
 	</div>
 	<div id='slider-container'>
