--- a/funcunit.html
+++ b/funcunit.html
@@ -1,4 +1,6 @@
--<html>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN"
+            "http://www.w3.org/TR/html4/strict.dtd">
+<html>
 	<head>
 		<link rel="stylesheet" type="text/css" href="../funcunit/qunit/qunit.css" />
 	</head>
